--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Cleverly\\MigrationToSql\\": "src",
+            "Cleverly\\MigrationToSql\\": "src"
         }
     },
     "autoload-dev": {
